# hexhawk

./: .gitignore  Cargo.toml  ENTERPRISE_ROADMAP.md  FINAL_EVALUATION.md  KEYBOARD_SHORTCUTS.md  LICENSE  PLUGIN_QUICK_REFERENCE.md  README.md  ROADMAP.md  competitive_landscape.html  fix_eval.py  hexhawk-enterprise.wixobj  hexhawk_assistant.py  package.json  prepare-release.ps1  run.ps1  run.sh
AetherframeGuard/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
AetherframeGuard/src-tauri/: Cargo.toml  tauri.conf.json
AetherframeGuard/src-tauri/src/: main.rs
HexHawk/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: .~lock.HEXHAWK_FOR_DUMMIES.docx#  AETHERFRAME_ADVANCEMENT_MODEL.md  AETHERFRAME_ADVANCEMENT_RUNBOOK.md  AETHERFRAME_CLEANUP_MANIFEST.md  AETHERFRAME_COMMERCIAL_OPERATIONS.md  AETHERFRAME_CORE.md  AETHERFRAME_CURRENT_POSTURE.md  AETHERFRAME_EVIDENCE_PRESERVATION_PLAN.md  AETHERFRAME_FACTORY.md  AETHERFRAME_FACTORY_GRADUATION.md  AETHERFRAME_FACTORY_LESSONS.md  AETHERFRAME_FACTORY_RUNBOOK.md  AETHERFRAME_LESSONS.md  AETHERFRAME_NEXT_PROMPT_PROTOCOL.md  AETHERFRAME_PRESERVED_EVIDENCE_INDEX.md  AETHERFRAME_PROJECT_TEMPLATE.md  AETHERFRAME_REPORTER_EVOLUTION.md  AETHERFRAME_REPORTER_NEXT_PROMPT_PLAN.md  AETHERFRAME_SMALL_CLEANUP_PLAN.md  AETHERFRAME_STATUS_DASHBOARD.md  AETHERFRAME_WORKSPACE_CLEANUP_CLOSED.md  AETHERFRAME_WORKSPACE_CLEANUP_DECISION_TABLE.md  AETHERFRAME_WORKTREE_DECOMMISSION_PLAN.md  BOARD_SCORECARD_2026-05-31.md  BOARD_UPDATE_2026-05-31.md  CURRENT_STATUS.md  EARLY_ACCESS_BUYER_CONFIRMATION_TEMPLATE.md  EARLY_ACCESS_BUYER_NOTE.md  EARLY_ACCESS_FULFILLMENT_CHECKLIST.md  EARLY_ACCESS_INSTALL_README.md  EARLY_ACCESS_OPERATIONS.md  EARLY_ACCESS_PACKAGE_CUSTODY.md  EARLY_ACCESS_RELEASE_NOTES_TEMPLATE.md  EARLY_ACCESS_TESTER_ACQUISITION.md  EARLY_ACCESS_TESTER_FEEDBACK_TEMPLATE.md  ENGINE_BOUNDARY_DOCTRINE.md  EXTERNAL_TESTER_KNOWN_ISSUES.md  HEXHAWK_AGENT_ONBOARDING_REPORT.md  HEXHAWK_FOR_DUMMIES.docx  HEXHAWK_FOR_DUMMIES.md  (+26 more)
gui-evidence/: controlled_release_gate_unsigned_native_gui_probe_2026-06-02_213600.json  official_updater_custody_native_gui_probe_2026-06-02_181500.json  release_hardening_native_gui_probe_2026-05-31.json  release_hardening_native_gui_probe_2026-06-01_204631.json  (+3 more)
plugin-api/: Cargo.toml
src-tauri/: Cargo.toml  cargo_log.txt  cargo_output.txt  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hexhawk-runtime-payload.nsh
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  constraint.rs  corpus.rs  debugger.rs  disassemble.rs  document.rs  file_dialog.rs  flirt.rs  graph.rs  gyre_snapshot.rs  hex.rs  inspect.rs  license.rs  llm.rs  mod.rs  nest_evidence.rs  nest_session_lifecycle.rs  patch.rs  pe_imports.rs  plugin_browser.rs  project_persistence.rs  repl.rs  run_plugins.rs  sandbox.rs  script.rs  strings.rs  structs.rs
src-tauri/src/plugins/: mod.rs
src-tauri/wix/: hexhawk-registry.wxs
(+406 files in other folders)
