[package]
name = "hexhawk-backend"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plugin_api = { path = "../plugin-api" }
log = "0.4"
tauri-plugin-log = "2"
libloading = "0.7"
object = "0.31"
capstone = "0.11"
once_cell = "1.19"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
tokio = { version = "1", features = ["sync", "rt"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Kernel",
] }

[[bin]]
name = "nest_cli"
path = "src/bin/nest_cli.rs"
