[package]
name = "hexhawk-backend"
version = "1.0.0"
edition = "2021"
build = "build.rs"
default-run = "hexhawk-backend"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-stronghold = "2"
iota_stronghold = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
plugin_api = { path = "../plugin-api" }
log = "0.4"
tauri-plugin-log = "2"
libloading = "0.7"
object = "0.31"
capstone = "0.11"
once_cell = "1.19"
memmap2 = "0.9"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
md-5 = "0.10"
tokio = { version = "1", features = ["sync", "rt"] }
lopdf = { version = "0.33", default-features = false, features = ["nom_parser"] }
cfb = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
keyring = "3"
base64 = "0.22"
rand = "0.8"
time = { version = "0.3", features = ["formatting"] }

[features]
trial = []

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ptrace", "process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_JobObjects",
] }

[[bin]]
name = "nest_cli"
path = "src/bin/nest_cli.rs"
