[workspace]

[package]
name = "aetherframe-guard-backend"
version = "0.1.0"
edition = "2021"
default-run = "aetherframe-guard-backend"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
